[gd_scene load_steps=4 format=3 uid="uid://ccmqueenj03hf"]

[ext_resource type="Script" uid="uid://dvlx1svnevvvp" path="res://hex_tile.gd" id="1_2crfn"]

[sub_resource type="TubeTrailMesh" id="TubeTrailMesh_3iqd7"]
radial_steps = 6
sections = 2
section_length = 0.1
section_rings = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2crfn"]
albedo_color = Color(0.938896, 0, 0.237025, 1)

[node name="HexTile" type="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_2crfn")

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="."]
depth = 0.2
polygon = PackedVector2Array(-0.00170231, 0.502532, -0.438432, 0.247913, -0.434344, -0.248619, -0.00656223, -0.500344, 0.436951, -0.251898, 0.4327, 0.250075)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionPolygon3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("TubeTrailMesh_3iqd7")
surface_material_override/0 = SubResource("StandardMaterial3D_2crfn")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
